# TinyEngine

./: CMakeLists.txt  main.cpp
framework/common/: BaseApplication.cpp  BaseApplication.h
framework/graphics/: OpenGLApplication.cpp  OpenGLApplication.h
framework/interface/: IApplication.h  IRuntimeModule.h  Interface.h
src/: main.cpp
